page-artista - fixati bottone e scrollbar orizzontale

--- a/b/page-artista/css/_main.scss
+++ b/b/page-artista/css/_main.scss
@@ -52,10 +52,7 @@ main{
     }
     }
 
-    .track-relative{
-        position: relative;
-        bottom: 120px;
-    }
+ 
 
     .track-likes-number{
         font-size: 0.7em;
